# cbds-take-home

./: .gitignore  playground.ipynb  pyproject.toml
tools/: __init__.py  geoplot_vals.py  load_enroll_data.py  load_gdp_data.py  model_trends.py  parse_country_data.py  sum_enroll_data.py
