[project]
name = "cbds-take-home"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chardet>=7.4.3",
    "kaleido>=1.3.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.6",
]
